package eapli.ecourse.boardmanagement.newdomain;

public class BoardPermission {
}
